--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.github.ngbinh.scalastyle:gradle-scalastyle-plugin_2.11:1.0.1'
         classpath "com.bmuschko:gradle-docker-plugin:6.4.0"
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
         classpath 'net.researchgate:gradle-release:2.6.0'
         classpath 'kr.motd.gradle:sphinx-gradle-plugin:2.7.2'
         classpath 'ru.vyarus:gradle-use-python-plugin:2.1.0'
         classpath 'com.github.jk1:gradle-license-report:1.13'
+        classpath "com.diffplug.spotless:spotless-plugin-gradle:3.28.0"
     }
 }
 
@@ -175,7 +175,7 @@ configure(subprojects) { project ->
         maven {
             url "https://h2o-release.s3.amazonaws.com/h2o/master/$h2oBuild/maven/repo/"
         }
-        
+
         if (sparkVersion.endsWith("-SNAPSHOT")) {
             maven {
                 url "https://repository.apache.org/content/repositories/snapshots/"
