[SW-1391][FollowUp-Java] Switch to Scala formatter (#2002)

--- a/gradle/scala.gradle
+++ b/gradle/scala.gradle
@@ -143,4 +143,7 @@ spotless {
     scala {
         scalafmt().configFile("$rootDir/.scalafmt.conf")
     }
+    java {
+        googleJavaFormat()
+    }
 }
