[SW-2138] Apply spotless formatting to gradle files

--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -52,7 +52,9 @@ jar {
 }
 
 shadowJar {
-    configurations = [project.configurations.shadowApi]
+    configurations = [
+        project.configurations.shadowApi
+    ]
     mergeServiceFiles()
 
     relocate 'javassist', 'ai.h2o.javassist'
