--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -41,7 +41,10 @@ task createPythonDockerfile(type: Dockerfile) {
     from "spark-py:${sparkVersion}"
     copyFile("h2o_pysparkling_${sparkMajorVersion}-${version}.zip", "/opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip")
     runCommand "pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip"
-
 }
 
-task buildDockerfiles(dependsOn: [createPythonDockerfile, createRDockerfile, createScalaDockerfile])
+task buildDockerfiles(dependsOn: [
+    createPythonDockerfile,
+    createRDockerfile,
+    createScalaDockerfile
+])
